bista_superasia_theme/static/src/scss/style.css
/* ... */
@media (min-width: 1024px) {
  #hero p {
    width: 60%;
  }
  #hero .carousel-control-prev, #hero .carousel-control-next {
    width: 5%;
  }
  .wishlist-options-desktop, .wishlist-options-desktop .input-group{
    padding:0;
  }
}
@media only screen and (min-width: 1024px){
.left-fixed-sidebar{
  background: #202020;
  width: 6vw;
  height: 100vh;
  /*position: fixed;
  z-index: 999;
  left: 0;*/
  transition: transform .55s cubic-bezier(.215,.61,.355,1),.4s opacity cubic-bezier(.215,.61,.355,1),-webkit-transform .55s cubic-bezier(.215,.61,.355,1);
  align-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  justify-content: space-between;
 } 
}
@media only screen and (max-width: 767px) and (min-width: 320px){
.wishlist-options{
  display: block!important;
 }
 .responsive-vision-statement{
    padding-top: 0!important;
  }
  #hero .carousel-item {
    background-size: auto !important;
  }
}
/* Small devices (tablets, 768px and up) */
@media only screen and (max-width: 768px){
#hero .carousel-item {
  background-size: contain;
}    
.responsive-vision-statement{
    padding-top: 2rem;
  }
.left-fixed-sidebar {
    /*height: 8vw;*/
 }
 /*.wishlist-options{
  display: none!important;
 }*/
 .wishlist-options-desktop{
  display: none!important;
  padding: 0;
  max-width: 100%;
  flex: 0 0 80%;
 }
 .wishlist-options-desktop .input-group{
    padding: 1% 0 0 5%;
    float: left;
 }
 .howItWork-content .howItWork-block-col {
    margin: 0 auto;
  }
  .sticky-top{
    display: flex;
    height: 8vw;
  }
  .hover-flag-dropdown{
    right: 10%;
  }
}
@media screen and (max-width: 1023px) and (orientation: landscape){
.left-fixed-sidebar {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 8vw;
  }
}
@media only screen and (max-width: 1023px){
  .left-fixed-sidebar {
    transition: .3s -webkit-transform cubic-bezier(.215,.61,.355,1);
    transition: .3s transform cubic-bezier(.215,.61,.355,1);
    transition: .3s transform cubic-bezier(.215,.61,.355,1),.3s -webkit-transform cubic-bezier(.215,.61,.355,1);
  }
  .address_pg{
  height:185vh;
  }
  .confirm_pg,.address_edit_pg{
  height: 100vh;
  }

.mobile-nav-toggle{
display:block;
}
.nav-menu{
display:none;
}
.mobile-nav-toggle {
  /*position: fixed;
  top: 35px;
  z-index: 9998;
  border: 0;
  background: none;
  font-size: 24px;
  transition: all 0.4s;
  outline: none !important;
  line-height: 1;
  cursor: pointer;
  text-align: left;*/
}
.mobile-nav-active .mobile-nav-toggle i {
    color: #fff;
    position: fixed;
    right: 5%;
    z-index: 10000;
    font-size: xx-large;
}

.mobile-nav-toggle i {
  color: #ac1520;
}

#mob_nav ul li.nav-item a.nav-link, .category_list_slide_link, .custom_nav_a, .cate{
    text-transform: uppercase !important;
}
.dropdown-item.cate.active{
    background-color: #BE222B !important;
}
.whatsappapi__button{
bottom: 5px !important;
right: 300px !important;
}




/* Mobile Navigation */
.mobile-nav {
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: 9999;
  overflow-y: auto;
  left: -260px;
  width: 260px;
  padding-top: 18px;
  background: #1f3548;
  transition: 0.4s;
}

.mobile-nav * {
  margin: 0;
  padding: 0;
  list-style: none;
}

.mobile-nav a {
  display: block;
  position: relative;
  color: #e3f0fc;
  padding: 10px 20px !important;
  font-weight: 500;
}

.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
  color: #9eccf4;
  text-decoration: none;
}

.mobile-nav .drop-down > a:after {
  content: "\ea99";
  font-family: IcoFont;
  padding-left: 10px;
  position: absolute;
  right: 15px;
}

.mobile-nav .active.drop-down > a:after {
  content: "\eaa0";
}

.mobile-nav .drop-down > a {
  padding-right: 35px;
}

.mobile-nav .drop-down ul {
  display: none;
  overflow: hidden;
}

.mobile-nav .drop-down li {
  padding-left: 20px;
}



.mobile-nav-overly {
  width: 100%;
  height: 100%;
  z-index: 9997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(31, 53, 72, 0.7);
  overflow: hidden;
  display: none;
}

.mobile-nav-active {
  overflow: hidden;
}

.mobile-nav-active .mobile-nav {
  left: 0;
}
.submenu_list_slide a{
    font-size: large;
}
.submenu_list_slide{
    position: fixed !important;
    will-change: transform;
    transform: none !important;
    width: 261px !important;
    height: 100% !important;
    background: #1f3548;
    overflow:auto;
    margin-left: -1px !important;
}
.submenu_list_slide .sticky_div{
color:white;
position:scrolled;
}



.logo img {
  padding: 0;
  margin: 0;
  max-height: 60px;
}

#products_grid_before{
display:none !important;
}


  /*.sticky-wrapper header nav #head_menu_div {
    opacity: 1 !important;
  }*/
  #header{
  width:100%;

  }
  .navbar.h-100{
        padding: 0 !important;
  }
  /*#head_menu_div{
    padding: 0;
    margin: 0;
    background:rgba(46, 68, 83, 1);
    height: 100vh !important;
  }*/
.navbar-logo{
    display:none;
}
.navbar-toggle{
    display:block;
    padding: 25px;
}
#mobile_div{
display:block;
/*display: flex;
justify-content: space-between;*/
}
ul.mt-n1{
height: 100% !important;
}
#header {
  padding: 5px 0 0;
  height:110px;
  }

.select2-container{
width:96% !important;
box-sizing: border-box;
border: 2px solid #ad3021;
border-radius: 4px;
font-size: 16px;
background-color: white;
}
#select2-drop{
    /*width: 260px !important;*/
    width: 100% !important;
    left : auto !important;
}


.left-fixed-sidebar{
display:none !important;
}
.mobile_ul ul{
opacity:1 !important;
background:white;
}

nav.navbar{
height:0% !important;
}

}    
@media only screen and (min-width: 400px){

}
/*--------------------------------------------------------------
# Sections General
--------------------------------------------------------------*/
.set-background{
  margin:0;
  height: 100vh;
  position: fixed;
  right: 0;
  z-index: -1;
}
.sigin-set-background{
  background: linear-gradient(360deg, #ffffff, #ffffff, #dffcbc, #dffcbc);
}
/* ... */

